# fortuna-next

./: CMakeLists.txt  LVGL_CONFIG_NOTES.txt  built_in_font_gen_ng.py  partitions.csv  sdkconfig  sdkconfig.old
example/: idf_component.yml  main.c  official_libs_example.c
example/EXIO/: TCA9554PWR.c  TCA9554PWR.h
example/I2C_Driver/: I2C_Driver.c  I2C_Driver.h
main/: CMakeLists.txt  COMPILE_FIX.md  I2C_TROUBLESHOOTING.md  QMI8658_ADJUSTMENTS.md  README_QMI8658.md  astro_chart.h  fortuna.c  idf_component.yml  lv_conf.h  qmi8658_complete_example.c  qmi8658_example.h  qmi8658_example_c.c
main/event/: lvgl_event_loop.h  main_event_loop.c  main_event_loop.h
main/font/: bacchus_extrabold_128.c  bacchus_extrabold_96.c  lv_font_montserrat_96.c  lv_font_pencil_24.c  lv_font_pencil_96.c
main/lvgl_screens/: home.c  home.h
main/screen/: app_list_screen.c  app_list_screen.h  audio_input_mask.c  audio_input_mask.h  chat_screen.c  chat_screen.h  home_screen.c  home_screen.h
main/service/: audio_system_service.c  audio_system_service.h  i2c_service.c  i2c_service.h  i2s_service copy.h  i2s_service.c  i2s_service.h  io_expander_service.c  io_expander_service.h  lcd_service.c  lcd_service.h  lcd_touch_service.c  lcd_touch_service.h  lvgl_service.c  lvgl_service.h  mic_service.c  mic_service.h  pcf85063a_service.c  pcf85063a_service.h  qmi8658_service.c  qmi8658_service.h  ui_system_service.c  ui_system_service.h  wifi_service.c  wifi_service.h
main/task/: ui_task.c
main/ui/: voice_overlay.c  voice_overlay.h
spiffs_data/: README.txt
